[metadata]
name = mcsrv-xImAnton
version = 1.1.0
author = xImAnton_
author_email = admin@ximanton.de
description = Manage your Minecraft Server with more comfort from the CLI
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/xImAnton/MCManager
project_urls =
    Bug Tracker = https://github.com/xImAnton/MCManager/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    click==8.1.2
    inquirer==2.9.2
    psutil==5.9.0

[options.entry_points]
console_scripts =
    mcsrv = mcsrv.cli:main

[options.packages.find]
where = src
